[B]2.6.1[/B]
• Changes for Kodi 18
• Add 4K HDR flag icon (filename must contain 'HDR')
• Minor fixes

[B]2.6.0[/B]
• Add possibility to choose gradient colors
• Add classic list for power menu
• Add Game OSD
• Improvements
• Minor fixes

[B]2.5.10[/B]
• Add support for movies genres icons for Personalized Widgets
• Add missing H262 flag icon
• Improvements
• Fix for PVR in some conditions
• Minor fixes

[B]2.5.9[/B]
• Add possibility to play trailers on movie information screen
• Reorder necessary addons in Skin Settings
• Minor fixes

[B]2.5.8[/B]
• Add possibility to show item label on top with minimize main menu setting
• Show mute icon on libraries when mute is enable
• Fix clearlogos disappearance when mute is enable
• Fix for LibreELEC settings addon
• Minor fixes

[B]2.5.7[/B]
• Add possibility to minimize main menu
• Add media flags icons for 'Triple lists' and 'Double lists' views
• Remove always attrib for defaultcontrol on Settings
• Changes on login screen
• Minor fixes

[B]2.5.6[/B]
• Add new 'Triple lists' view for TV shows
• Add new 'Double lists' view for seasons
• Changes for Kodi 18 : Migrate add-on settings to settings library
• Minor fixes

[B]2.5.5[/B]
• Add possibility to show clearlogos at the top of home menu
• Add clearlogos on dialog music info
• Add banners on dialog video info
• Fix episodes thumbs with Personalized Widgets
• Fix on 'Double lists' and 'Triple lists' views to launch full album
• Minor fixes

[B]2.5.4[/B]
• Add posters on 'Fanart' view
• Add new 'Double lists' view for sets
• Fix end time resume flag icon with AM/PM
• Fix visibility for 'Double lists' and 'Triple lists' views
• Minor fixes

[B]2.5.3[/B]
• Add new 'Double lists' view for artists and albums
• Add new 'Triple lists' view for artists
• Improve esthetic appearance
• Minor fixes

[B]2.5.2[/B]
• Add miniatures panel for Personalized Widgets
• Add support for animated weather icons
• Fix missing watched icons and progress bars for Personalized Widgets